--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
     Ideation
   </div>
 
-  <section class="mashup ph3 pv5 pa5-ns bg-white">
+
+
+
+  <!--Mash up-->
+  <section class="mashup ph3 pv5 pa5-ns bg-white" id="mashup">
     <div class="flex flex-column-reverse flex-row-ns">
      <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
       <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
@@ -184,16 +188,16 @@
   </div>
   </section>
   
-
-  <section class="newidea ph3 pv5 pa5-ns bg-white" id="newidea">
+  <!--DOTMOCRACY-->
+  <section class="dotmocracy ph3 pv5 pa5-ns bg-white" id="dotmocracy">
     <div class="flex flex-column-reverse flex-row-ns">
      <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
       <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
-        Mash up
+        Dotmocracy
       </div>
-      <div class="f3-ns rubik pb2 pb2-ns">Description</div>
+      <div class="f3-ns rubik pb2 pb2-ns">How dotmocracy works</div>
       <div class="measure pb3-ns">
-        Mash-ups is a collaborative idea generation method in which participants come up with innovative concepts by combining different elements together. In a first step, participants brainstorm around different areas, such as technologies, human needs, and existing services. In a second step, they rapidly combine elements from those areas to create new, fun and innovative concepts. Mash-ups demonstrates how fast and easy it can be to come up with innovative ideas.
+        Dotmocracy is a simple method for group prioritization or decision-making. It is not an activity on its own, but a method to use in processes where prioritization or decision-making is the aim. The method supports a group to quickly see which options are most popular or relevant. The options or ideas are written on post-its and stuck up on a wall for the whole group to see. Each person votes for the options they think are the strongest, and that information is used to inform a decision.
       </div>
    
      </div>
@@ -211,7 +215,7 @@
         1
       </div>
       <div class="f4-ns measure-narrow">
-        Mashups: Organize participants into small groups of 3 - 5. Explain that they will have 12 minutes to come up with as many mash-up concepts as they can
+        Place all the ideas/options up on a wall, one idea per post-it. Have the group cluster similar ideas/options and remove any duplicates. The fewer options there are, the clearer and easier the voting will be.
       </div>
     </div>
 
@@ -220,7 +224,7 @@
         2
       </div>
       <div class="f4-ns measure-narrow">
-        Mashups: Organize participants into small groups of 3 - 5. Explain that they will have 12 minutes to come up with as many mash-up concepts as they can
+        The group will now vote on which options they think are best by using dots, made simply with a marker on the post-it. Each group member gets 5 dots to vote with (or less if there are less options).
       </div>
     </div>
 
@@ -229,13 +233,75 @@
         3
       </div>
       <div class="f4-ns measure-narrow">
-        Mashups: Organize participants into small groups of 3 - 5. Explain that they will have 12 minutes to come up with as many mash-up concepts as they can
+        Once all members have distributed their dots, the group could proceed in a variety of ways:
+        choose the option that received the most dots.
+        Organize the ideas on a line from most to least dots, then discuss their relative merits.
       </div>
     </div>
 
     </div>
   </div>
   </section>
+
+
+
+    <!--Speed dating-->
+    <section class="speeddating ph3 pv5 pa5-ns bg-white" id="speeddating">
+      <div class="flex flex-column-reverse flex-row-ns">
+       <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
+        <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
+          Speed dating
+        </div>
+        <div class="f3-ns rubik pb2 pb2-ns">How speed dating works</div>
+        <div class="measure pb3-ns">
+          This is a great way for a group to quickly come up with many ideas and to have people build on other’s ideas. The end result is a beautiful mural of thoughts that can be used as inspiration throughout events now and in the future.
+        </div>
+     
+       </div>
+  
+        <div class="sm-col-6 flex items-start justify-center">
+          <img src="/assets/images/hand_-14-(1).png" alt="">
+        </div>
+  
+    </div>
+  
+    <div class="steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns">
+  
+      <div class="col-12 sm-col-3 pb3 pb0-ns">
+        <div class="steps f1 rubik">
+          1
+        </div>
+        <div class="f4-ns measure-narrow">
+          Find a table that is big enough for everyone in the group to sit around. People should fit tightly, and be shoulder to shoulder along all sides.
+          Place a large roll of paper that covers the entire table.
+        </div>
+      </div>
+  
+      <div class="col-12 sm-col-3 pb3 pb0-ns">
+        <div class="steps f1 rubik">
+          2
+        </div>
+        <div class="f4-ns measure-narrow">
+          Have the facilitator start playing music. Each person must start writing down an idea about the topic at hand.
+          After about 2 minutes, the music should stop. Everyone should take a step to their left so they are in the position that their neighbour was previously in.
+        </div>
+      </div>
+  
+      <div class="col-12 sm-col-3 pb3 pb0-ns">
+        <div class="steps f1 rubik">
+          3
+        </div>
+        <div class="f4-ns measure-narrow">
+          The music starts again, and people must now build off of their neighbour’s idea.
+          Repeat steps 5 & 6 until the whole roll of paper is covered in ideas!
+        </div>
+      </div>
+  
+      </div>
+    </div>
+    </section>
+
+
 
   <section class="hero-background">
     <img src="" alt="">
