--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="#ideation" id="" class="js-scroll scroll-to">Ideation</a>
           </li>
           <li class="pb2 pb3-ns">
-            <a href="" id="" class="js-scroll scroll-to">Feedback</a>
+            <a href="#feedback" id="" class="js-scroll scroll-to">Feedback</a>
           </li>
           <li class="pb2 pb3-ns">
             <a href="#" id="" class="js-scroll scroll-to">Self growth</a>
@@ -106,7 +106,7 @@
 
   </div>
 
-  <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button">
+  <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button" data-id="checkin">
     <div class="steps-description">
       Steps
     </div>
@@ -115,7 +115,7 @@
     </div>
   </div>
 
-  <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text">
+  <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text" data-text="checkin">
 
     <div class="col-12 sm-col-3 pb3 pb0-ns">
       <div class="steps f1 rubik">
@@ -174,7 +174,7 @@
 
 
 
-  <div class="button steps-button flex flex-column pa2 mt4-ns" id="steps-button" data-id="idoarrt-button">
+  <div class="button steps-button flex flex-column pa2 mt4-ns" id="steps-button" data-id="idoarrt">
 
     <div class="flex flex-row justify-between">
       <div class="steps-description">
