fix arrow rotation

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="steps-description">
       Steps
     </div>
-    <div class="arrow">
+    <div class="arrow" data-arrow="checkin">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
     </div>
   </div>
@@ -180,7 +180,7 @@
       <div class="steps-description">
         Steps
       </div>
-      <div class="arrow">
+      <div class="arrow" data-arrow="idoarrt">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
       </div>
     </div>
