--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel = "stylesheet" type = "text/css" href = "/assets/css/basscss-grid.css" />
     <link rel = "stylesheet" type = "text/css" href = "/assets/css/style.css" />
     <link rel = "stylesheet" type = "text/css" href = "/assets/css/shapes.css" />
+    <link rel = "stylesheet" type = "text/css" href = "/assets/css/viewport.css" />
     
   </head>
   <body>
@@ -41,7 +42,7 @@
             <a href="#checkin" class="js-scroll scroll-to">Check-in</a> 
           </li>
           <li class="pb2 pb3-ns">
-            <a href="#idoarrt" class="js-scroll scroll-to">IDOARRT</a>
+            <a href="#purpose" class="js-scroll scroll-to">Purpose</a>
           </li>
           <li class="pb2 pb3-ns">
             <a href="#team" id="" class="js-scroll scroll-to">Team</a>
@@ -53,30 +54,33 @@
             <a href="#feedback" id="" class="js-scroll scroll-to">Feedback</a>
           </li>
           <li class="pb2 pb3-ns">
-            <a href="#" id="" class="js-scroll scroll-to">Self growth</a>
+            <a href="#reflection" id="" class="js-scroll scroll-to">Reflection</a>
           </li>
         </ol>
         <div class="f3-ns pb2 bold-font rubik">
-          Download toolbox
+          Bonus material
         </div>
         <ol class="">
-          <li class="pb3-ns">
+          <li class="pb2 pb3-ns">
             <a href="" id="" class="js-scroll scroll-to">PDF</a>
+          </li>  
+          <li class="pb3 pb3-ns">
+            <a href="" id="" class="js-scroll scroll-to">Play game</a>
+          </li>  
         </ol>
       </div>
       </div>
     </div>
-
-
-    <span class="shape splash"></span>
   </section>  
 
   
 
 
   
-  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white" id="checkin">
-    Check-in
+  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-sunrise black section-animation" id="checkin">
+    <div class="z-index animation-title">Check-in</div>
+    <span class="shape circle"></span>
+    <span class="shape check-in-smiley"></span>
   </div>
 
   <section class="mashup ph3 pv5 pa5-ns bg-white" id="check-in">
@@ -148,8 +152,8 @@
   </div>
   </section>
 
-  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white" id="idoarrt">
-    IDOARRT
+  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white" id="purpose">
+    Purpose
   </div>
 
   <section class="mashup ph3 pv5 pa5-ns bg-white" id="i-do-arrt">
@@ -981,8 +985,8 @@
 
 
 
-  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-fire-brick white" id="ideation">
-    Ideation
+  <div class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-fire-brick white" id="feedback">
+    Feedback
   </div>
 
 
@@ -1409,7 +1413,8 @@ Something I am curious about is... Signed, _____ ”
 
 
 
-  <script src="assets/js/gsap.min.js"></script>  
+ 
+  <script src="https://unpkg.com/in-view@0.6.1/dist/in-view.min.js"></script>
   <script src="assets/js/main.js"></script>
   </body>
 </html>
