--- a/index.html
+++ b/index.html
@@ -1545,22 +1545,171 @@
  
 
 
+   <!--Appreciation Train-->
+ <section class="appricationtrain ph3 pv5 pa5-ns bg-white" id="apprication–train">
+  <div class="flex flex-column-reverse flex-row-ns">
+   <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
+    <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
+      Appreciation Train
+    </div>
+    <div class="f3-ns rubik pb2 pb2-ns"> how appreciation train works</div>
+    <div class="measure pb3-ns">
+      This exercise is useful for bringing groups together, to create interpersonal bonds, and to build trust. 
+      Participants stand opposite each other and have 30 seconds to give appreciative feedback to the other person.
+      The group rotates until everyone has given feedback to everyone else. 
+      The feedback will be positive: What I appreciate about you is…<br><br>
+      It is often used as part of wrap-up activities, to create an energized feeling to leave with.
+      This exercise requires a faciliator or someone who will be the timekeeper and shouting SWITCH and MOVE. 
+    </div>
+ 
+   </div>
+
+    <div class="sm-col-6 flex items-start justify-center">
+      <img src="/assets/images/hand_-14-(1).png" alt="">
+    </div>
+
+</div>
+
+<div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button" data-id="appreciationtrain">
+  <div class="steps-description">
+    Steps
+  </div>
+  <div class="arrow" data-arrow="appreciationtrain">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
+  </div>
+</div>
+
+<div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text" data-text="appreciationtrain">
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      1
+    </div>
+    <div class="f4-ns measure-narrow">
+      The group is split in half and are suppose to stand in two lines, with each person facing a partner in the other line. 
+      If you have an odd number of people then one person should stand at one end without a partner.
+      One line will be called left and the other line will be named right. 
+    </div>
+  </div>
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      2
+    </div>
+    <div class="f4-ns measure-narrow">
+      Set the timer to 30seconds and when the countdown begins the left side will have 30seconds to give feedback to their partner. 
+      When time is over the timekeeper shouts SWITCH, and everyone switches now its the right sides turn to give feedback.
+      Remember that everyone should start their feedback with: What I appreciate about you is...
+    </div>
+  </div>
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      3
+    </div>
+    <div class="f4-ns measure-narrow">
+      When both lines have given feedback the timekeeper will shout MOVE by then everyone takes a step to their left, and should be facing a new partner.<br><br>
+      It is useful to imagine the two lines as a chain, with the people at the end of each line moving round to the other line. 
+      If done properly, everyone will have partnered and given feedback to everyone else.<br><br>
+      Depending on the number of people in the group, you will find that sometimes there may be a person standing at one end, or both ends, with no partner. 
+      This always happens. Ask them to stand and reflect for a moment, before moving to their next partner the next time you say move.
+    </div>
+  </div>
+
+  </div>
+
+</div>
+</section>
 
 
 
-  <!--Current Strongest Impression-->
-  <section class="current Strongest Impression ph3 pv5 pa5-ns bg-white" id="current–strongest–impression">
+ <!--Appreciation Mingle-->
+ <section class="appricationmingle ph3 pv5 pa5-ns bg-white" id="apprication–mingle">
+  <div class="flex flex-column-reverse flex-row-ns">
+   <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
+    <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
+      Appreciation Mingle
+    </div>
+    <div class="f3-ns rubik pb2 pb2-ns"> how appreciation mingle works</div>
+    <div class="measure pb3-ns">
+      The appreciation mingle is an exercise in which every member in a group gives appreciation to every other member in the group. 
+      Often used as a closing activity, it aims to facilitate connection, generate positive energy and create a sense of team.
+    </div>
+ 
+   </div>
+
+    <div class="sm-col-6 flex items-start justify-center">
+      <img src="/assets/images/hand_-14-(1).png" alt="">
+    </div>
+
+</div>
+
+<div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button" data-id="appreciationmingle">
+  <div class="steps-description">
+    Steps
+  </div>
+  <div class="arrow" data-arrow="appreciationmingle">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
+  </div>
+</div>
+
+<div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text" data-text="appreciationmingle">
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      1
+    </div>
+    <div class="f4-ns measure-narrow">
+      Sitting in a circle, each participant writes a note to every other member in the group. 
+      This format can vary. 
+      When using this activity as part of a closure process, a suggestion is to use: <br>
+      <div class="bold-font">“What I appreciate the most about you…”</div>
+      <div class="bold-font">“My challenge to you going forward is…”</div>
+      Request that all participants remain in the circle so that each person can see (and remember to write for) every other person.
+    </div>
+  </div>
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      2
+    </div>
+    <div class="f4-ns measure-narrow">
+      Be attentive to the time it takes participants to write. 
+      Generally some participants need more time than others. <br><br>
+      Remind all participants not to write too much. 
+      Notice if particular participants are writing extensively on each note and suggest that they summarize in just a few words and deliver the rest verbally.
+    </div>
+  </div>
+
+  <div class="col-12 sm-col-3 pb3 pb0-ns">
+    <div class="steps f1 rubik">
+      3
+    </div>
+    <div class="f4-ns measure-narrow">
+      Once most participants are finished writing their note, invite them to mingle and deliver the communication.<br><br>
+      The communication should be delivered one-on-one, and shared verbally, with the post-it also handed over.<br><br>
+      Once most participants are finished writing their note, invite them to mingle and deliver the communication.<br>
+      The communication should be delivered one-on-one, and shared verbally, with the post-it also handed over.<br>
+    </div>
+  </div>
+
+</div>
+</section>
+
+
+  <!--Strongest Impression-->
+  <section class="StrongestImpression ph3 pv5 pa5-ns bg-white" id="strongest–impression">
     <div class="flex flex-column-reverse flex-row-ns">
       <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
         <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
-          Current Strongest Impression
+          Strongest Impression
         </div>
-        <div class="f3-ns rubik pb2 pb2-ns"> how current strongest impression works</div>
+        <div class="f3-ns rubik pb2 pb2-ns"> how strongest impression works</div>
         <div class="measure pb3-ns">
-          Openness is one of the most important ingredients in building constructive relationships and thriving teams.
-          Openness creates trust and trust creates more openness. This exercise aims to support groups to build trust
-          and openness and for individuals to gain self-awareness and insight. This exercise should always be conducted
-          with thoughtfulness and high awareness of group dynamics.
+          Openness is one of the most important ingredients in building constructive relationships and thriving teams. 
+        Openness creates trust and trust creates more openness.<br><br>
+        This exercise aims to support groups to build trust and openness and for individuals to gain self-awareness and insight. 
+       This exercise should always be conducted with thoughtfulness and high awareness of group dynamics.
         </div>
 
       </div>
@@ -1571,67 +1720,73 @@
 
     </div>
 
-    <div class="steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns">
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          1
-        </div>
-        <div class="f4-ns measure-narrow">
-          The intention of this exercise is to create a high quality of connection out of which people spontaneously
-          enjoy contributing to one another’s well-being.
-
-          Work in a small team or organize a larger group into groups of around 4 to 6. Groups should have at least some
-          experience working together, as a basis for getting to know each other better.
-        </div>
+    <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button" data-id="strongestimpression">
+      <div class="steps-description">
+        Steps
       </div>
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          2
-        </div>
-        <div class="f4-ns measure-narrow">
-          Write down the name of the person you are addressing. Complete the following two sentences for that person.
-          Sign it with your name.
-
-          “To _____: My strongest impression of you up to this point is…
-
-          Something I am curious about is... Signed, _____ ”
-        </div>
+      <div class="arrow" data-arrow="strongestimpression">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
       </div>
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          3
-        </div>
-        <div class="f4-ns measure-narrow">
-          In each smaller group, each participant completes the above sentences using one post-it for each participant
-          in the group. Once all participants in a group are done writing, they deliver the communication, one-by-one,
-          verbally, handing the post-it note to its addressee afterward.
-        </div>
+  </div>
+  
+  <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text" data-text="strongestimpression">
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        1
       </div>
-
+      <div class="f4-ns measure-narrow">
+        The intention of this exercise is to create a high quality of connection out of which people spontaneously enjoy contributing to one another’s well-being.<br><br>
+        Work in a small team or organize a larger group into groups of around 4 to 6. Groups should have at least some experience working together, as a basis for getting to know each other better.
+      </div>
     </div>
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        2
+      </div>
+      <div class="f4-ns measure-narrow">
+        Write down the name of the person you are addressing.<br>
+        Complete the following two sentences for that person.<br>
+        Sign it with your name.<br><br>
+  
+        <div class="bold-font">“To _____: My strongest impression of you up to this point is…
+         Something I am curious about is... Signed, _____ ”</div>
+  
+      </div>
     </div>
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        3
+      </div>
+      <div class="f4-ns measure-narrow">
+        In each smaller group, each participant completes the above sentences using one post-it for each participant in the group. 
+        Once all participants in a group are done writing, they deliver the communication, one-by-one, verbally, handing the post-it note to its addressee afterward.
+      </div>
+    </div>
+  
+    </div>
+  
+  </div>
   </section>
 
   <section class="hero-background">
     <img src="" alt="">
   </section>
 
-  <!--Principles of Effective Feedback-->
-  <section class="Principles of Effective Feedback ph3 pv5 pa5-ns bg-white" id="Principles of Effective Feedback">
+  <!--Principles of Feedback-->
+  <section class="principlesoffeedback ph3 pv5 pa5-ns bg-white" id="Principles-of-Feedback">
     <div class="flex flex-column-reverse flex-row-ns">
       <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
         <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
-          Principles of Effective Feedback
+          Principles of Feedback
         </div>
-        <div class="f3-ns rubik pb2 pb2-ns"> how principles of effective feedback works</div>
+        <div class="f3-ns rubik pb2 pb2-ns"> How principles of feedback works</div>
         <div class="measure pb3-ns">
-          The purpose of this exercise is for a group to discuss, define, and come to agreement around key principles of
-          effective feedback. Participants discuss examples of effective and ineffective feedback in pairs, then work
-          together to define “effective feedback.” Then, as a group, they create a list of principles that they will aim
-          to work by.
+          The purpose of this exercise is for a group to discuss, define, and come to agreement around key principles of effective feedback.<br><br>
+          Participants discuss examples of effective and ineffective feedback in pairs, then work together to define “effective feedback”.
+           Then, as a group, they create a list of principles that <br> they will aim to work by.
         </div>
 
       </div>
@@ -1642,48 +1797,56 @@
 
     </div>
 
-    <div class="steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns">
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          1
-        </div>
-        <div class="f4-ns measure-narrow">
-          Explain the purpose of the session: for the group to come to agreement around key principles of effective
-          feedback. If relevant, briefly discuss as a group what feedback is and why it is a useful practice. Put
-          participants into pairs and ask them to discuss examples of when they have received effective/helpful
-          feedback, and ineffective/harmful feedback. Give them 5-10 minutes before bringing the group together to hear
-          some examples.
-        </div>
+    <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button" data-id="principlesoffeedback">
+      <div class="steps-description">
+        Steps
       </div>
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          2
-        </div>
-        <div class="f4-ns measure-narrow">
-          Write “effective” and “ineffective” as headers on each flipchart. Invite suggestions from the group while you
-          write them up, covering “effective” first, then moving to “ineffective”.
-        </div>
+      <div class="arrow" data-arrow="principlesoffeedback">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img" class="icon__3MZ-1lVeElHHMs4AZWgFO6"><title>Arrow Chevron Down Icon</title><path d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z"></path></svg>
       </div>
-
-      <div class="col-12 sm-col-3 pb3 pb0-ns">
-        <div class="steps f1 rubik">
-          3
-        </div>
-        <div class="f4-ns measure-narrow">
-          Support the completion of the group’s brainstorm by adding principles from the list below. Generally, most of
-          these principles will be expressed in one way or another. Only add principles that have not been voiced by the
-          group already. Timing: Be aware of the other person’s needs and priorities. Ask them if it's a good time. They
-          could be rushing off to do a task, etc.
-          Self-awareness: Be aware of your own feelings; do not give feedback if you are triggered or angry.
-
-
-        </div>
+  </div>
+  
+  <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text" data-text="principlesoffeedback">
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        1
       </div>
-
+      <div class="f4-ns measure-narrow">
+        Explain the purpose of the session: for the group to come to agreement around key principles of effective feedback. 
+        If relevant, briefly discuss as a group what feedback is and why it is a useful practice. <br><br>
+        Put participants into pairs and ask them to discuss examples of when they have received effective/helpful feedback, and ineffective/harmful feedback. 
+        Give them 5-10 minutes before bringing the group together to hear some examples.
+      </div>
     </div>
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        2
+      </div>
+      <div class="f4-ns measure-narrow">
+        Write “effective” and “ineffective” as headers on each flipchart. 
+      Invite suggestions from the group while you write them up, covering “effective” first, then moving to “ineffective”.
+      </div>
     </div>
+  
+    <div class="col-12 sm-col-3 pb3 pb0-ns">
+      <div class="steps f1 rubik">
+        3
+      </div>
+      <div class="f4-ns measure-narrow">
+        Support the completion of the group’s brainstorm by adding principles from the list below. 
+        Generally, most of these principles will be expressed in one way or another. Only add principles that have not been voiced by the group already. <br><br>
+        Timing: Be aware of the other person’s needs and priorities. Ask them if it's a good time. 
+        They could be rushing off to do a task, etc. Self-awareness: Be aware of your own feelings; do not give feedback if you are triggered or angry.
+
+        
+      </div>
+    </div>
+  </div>
+</div>
+  
+  </div>
   </section>
 
 
