fix stinky fish id

--- a/index.html
+++ b/index.html
@@ -27,16 +27,23 @@
 
 
     <section>
-      <div class="f-headline-ns f1 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv3 pt0-ns lh-title">
-        SRF toolbox
+      <div class="f-headline-ns f1 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv3 pt0-ns lh-title tc">
+        SRF Werkzeugkiste
       </div>
     </section>
 
     <section class="ph3 pb5  pa5-ns flex items-center" id="">
       <div class="flex flex-column flex-row-ns">
         <div class="f1-ns rubik lh-title-ns sm-col-6 flex items-start justify-center pr4-ns pb4">
-          This is a toolbox for anyone who wants to do things more creatively and collaboratively in their team or
-          organization.
+          <div class="flex flex-column">
+            <div class="pb4">
+              This is a toolbox for anyone who wants to do things more creatively and collaboratively in their team or
+            organization.
+            </div>
+            <div class="play-game-button check-in-question pb2 f6">
+              <a href="" class=""><p>Play game</p></a>
+            </div>
+          </div>
         </div>
         <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa2 pa4-ns table-of-contents">
           <div class="f3-ns pb2 bold-font rubik">
@@ -117,7 +124,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/selfass.gif" alt="Flowers in Chania">
+          <img src="/assets/images/self-assessment.gif" alt="Flowers in Chania">
         </div>
 
       </div>
@@ -530,7 +537,7 @@
 
 
     <!--Stinky fish-->
-    <section class="stinky-fish ph3 pv5 pa5-ns bg-white" id="stinky-fish">
+    <section class="stinky-fish ph3 pv5 pa5-ns bg-white" id="stinky fish">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
@@ -2030,9 +2037,80 @@
     <!--CHECOUT-->
     <div
       class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white"
-      id="checkout">
-      Check-out
+      id="reflection">
+      Reflection
     </div>
+
+    <section class="mashup ph3 pv5 pa5-ns bg-white" id="reflection">
+      <div class="flex flex-column-reverse flex-row-ns">
+        <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
+          <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
+            Reflection
+          </div>
+          <div class="f3-ns rubik pb2 pb2-ns">How reflection works</div>
+          <div class="measure pb4 pb4-ns">
+            Team reflection is for members to express thoughts, feelings and opinions about a shared experience, to build openness and trust in the team, and to draw out key learnings and insights to take forward to improve future application. First reflecting individually, then sharing individual reflections with the group. Insights and learning emerge for future application and improvement. Use this session one or more times throughout a project or program.
+          </div>
+
+        </div>
+
+        <div class="sm-col-6 flex items-start justify-center">
+          <img src="/assets/images/hand_-14-(1).png" alt="">
+        </div>
+
+      </div>
+
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+        data-id="checkout">
+        <div class="steps-description">
+          Steps
+        </div>
+        <div class="arrow" data-arrow="checkout">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" role="img"
+            class="icon__3MZ-1lVeElHHMs4AZWgFO6">
+            <title>Arrow Chevron Down Icon</title>
+            <path
+              d="M12 18.999c-.4 0-.776-.156-1.059-.438L.22 7.841A.745.745 0 010 7.31c0-.2.078-.389.22-.53a.744.744 0 011.06 0L12 17.499 22.72 6.78a.744.744 0 011.06 0 .744.744 0 010 1.06L13.06 18.56a1.487 1.487 0 01-1.06.439z">
+            </path>
+          </svg>
+        </div>
+      </div>
+
+      <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text"
+        data-text="checkout">
+
+        <div class="col-12 sm-col-6 pb3 pb0-ns">
+          <div class="steps f1 rubik">
+            1
+          </div>
+          <div class="f4-ns measure-narrow">
+            Start with a 10 minutes individually reflection on the recent session.
+            You have the following reflection questions to think of and answer.  
+            <br>
+            <br>
+            How happened that affected you?
+            <br>
+            How did it make you feel?
+            <br>
+            What did you learn?
+            <br>
+            How can you apply it in the future?
+          </div>
+        </div>
+
+        <div class="col-12 sm-col-6 pb3 pb0-ns">
+          <div class="steps f1 rubik">
+            2
+          </div>
+          <div class="f4-ns measure-narrow">
+            Now take approximately 30minutes to share your reflections to the group. Make sure that everyone gets to share.
+          </div>
+        </div>
+
+
+      </div>
+      </div>
+    </section>
 
 
 
