fix id for mappin team culture

--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
 
 
     <!--Mapping of organizational culture-->
-    <section class=" ph3 pv5 pa5-ns bg-white" id="mapping-team-culture">
+    <section class=" ph3 pv5 pa5-ns bg-white" id="mapping-of-organizational-culture">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
