fix principles of feedback

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     </div>
 
     <!--Team self asessment-->
-    <section class="self-assessment ph3 pv5 pa5-ns bg-white" id="self-assessment">
+    <section class="self-assessment ph3 pv5 pa5-ns bg-white" id="self-assesment">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
@@ -1434,7 +1434,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/fly.gif" alt="Fly">
         </div>
 
       </div>
@@ -1943,7 +1943,7 @@
     </section>
 
     <!--Principles of Feedback-->
-    <section class="principlesoffeedback ph3 pv5 pa5-ns bg-white" id="Principles-of-Feedback">
+    <section class="principlesoffeedback ph3 pv5 pa5-ns bg-white" id="Principles of Effective Feedback">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
