--- a/index.html
+++ b/index.html
@@ -1852,7 +1852,7 @@
 
 
     <!--Strongest Impression-->
-    <section class="StrongestImpression ph3 pv5 pa5-ns bg-white" id="current-strongest–impression">
+    <section class="StrongestImpression ph3 pv5 pa5-ns bg-white" id="current–strongest–impression">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
