--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,7 @@
 
 
     <!--Appreciation Train-->
-    <section class="appricationtrain ph3 pv5 pa5-ns bg-white" id="apprication–train">
+    <section class="appricationtrain ph3 pv5 pa5-ns bg-white" id="appreciation–train">
       <div class="flex flex-column-reverse flex-row-ns">
         <div class="flex flex-column flex-column-ns justify-center sm-col-6 pr4-ns pr0">
           <div class="f2 f2-ns rubik pt3 pt0-ns pb3 pb4-ns">
