add animation until fly on the wall

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/self-assessment.gif" alt="Emoji">
         </div>
 
       </div>
@@ -463,7 +463,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/whowhatwhen.gif" alt="">
         </div>
 
       </div>
@@ -556,7 +556,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/fish.gif" alt="">
         </div>
 
       </div>
@@ -646,7 +646,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/campfire.gif" alt="">
         </div>
 
       </div>
@@ -792,7 +792,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/teamculture.gif" alt="">
         </div>
 
       </div>
@@ -905,7 +905,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/CRAZY8.gif" alt="">
         </div>
 
       </div>
@@ -994,7 +994,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/mashup.gif" alt="">
         </div>
 
       </div>
@@ -1081,7 +1081,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/dotmocracy.gif" alt="">
         </div>
 
       </div>
@@ -1163,7 +1163,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/speeddating.gif" alt="">
         </div>
 
       </div>
@@ -1249,7 +1249,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/braindump.gif" alt="">
         </div>
 
       </div>
@@ -1342,7 +1342,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/howmightwe.gif " alt="">
         </div>
 
       </div>
@@ -1517,7 +1517,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/startstop.gif" alt="">
         </div>
 
       </div>
@@ -1602,7 +1602,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/2w1s.gif" alt="">
         </div>
 
       </div>
